--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,17 @@
 [project]
 name = "uk-petitions"
 version = "0.1.0"
-description = "Add your description here"
+description = "A Python project to analyze UK Parliament petitions data"
+authors = [{ name = "Iuliia Stasiuk", email = "uliastasuk118@gmail.com" }]
+license = { text = "MIT" }
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "streamlit",
+    "requests",
+    "pandas",
+    "altair"
+]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
